--- a/project/onlinecommerceApp/templates/login.html
+++ b/project/onlinecommerceApp/templates/login.html
@@ -1,11 +1,42 @@
-<!-- templates/registration/login.html -->
-{% extends "base_generic.html" %}
+{% extends "base.html" %}
+{% load custom_filters %}
+
+{% block title %}Login{% endblock %}
 
 {% block content %}
-  <h2>Login</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-  </form>
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <h2 class="text-center">Iniciar sesión</h2>
+        {% if error_message %}
+            <div id="error-message" class="alert alert-danger" role="alert">
+                {{ error_message }}
+            </div>
+        {% endif %}
+        <form method="post" class="mt-4">
+            {% csrf_token %}
+            <div class="form-group">
+                {{ form.username.label_tag }}
+                {{ form.username|add_class:"form-control" }}
+            </div>
+            <div class="form-group">
+                {{ form.password.label_tag }}
+                {{ form.password|add_class:"form-control" }}
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Iniciar sesión</button>
+        </form>
+
+        <div class="text-center mt-2">
+            <a href="{% url 'register' %}">¿No tienes una cuenta? Regístrate</a>
+        </div>
+    </div>
+</div>
+
+<script>
+    setTimeout(function() {
+        var errorMessage = document.getElementById('error-message');
+        if (errorMessage) {
+            errorMessage.style.display = 'none';
+        }
+    }, 3000);
+</script>
 {% endblock %}
