--- a/project/onlinecommerceApp/templates/register.html
+++ b/project/onlinecommerceApp/templates/register.html
@@ -14,6 +14,10 @@
                 {{ form.username|add_class:"form-control" }}
             </div>
             <div class="form-group">
+                {{ form.apellido.label_tag }}
+                {{ form.apellido|add_class:"form-control" }}
+            </div>
+            <div class="form-group">
                 {{ form.email.label_tag }}
                 {{ form.email|add_class:"form-control" }}
             </div>
