Added Tiendas y Inventarios
agrege la logica para que el usuario pueda registrarse como tendero o comprador y segun como se registre tiene la opcion de gestionar el inventario de la tienda

--- a/project/onlinecommerceApp/templates/dashboard.html
+++ b/project/onlinecommerceApp/templates/dashboard.html
@@ -53,9 +53,8 @@
     <div class="dashboard">
         <aside class="menu">
             <ul>
-                <li><a href="{%url 'product-list'%}">Productos</a></li>
-                <li><a href="#">Ventas</a></li>
-                <li><a href="#">Inventario</a></li>
+                <li><a href="{%url 'listar_producto'%}">Productos</a></li>
+                <li><a href="{%url 'listar_tienda'%}">Tiendas</a></li>
                 <li><a href="#">Clientes</a></li>
                 <li><a href="#">Reportes</a></li>
             </ul>
@@ -68,7 +67,7 @@
 
             <section class="stats">
                 <div class="stat-card">
-                    <h3 href="{% url 'product-list' %}">Productos</h3>
+                    <h3 href="">Productos</h3>
                     <p>$1000</p>
                 </div>
                 <div class="stat-card">
