--- a/project/onlinecommerceApp/templates/base.html
+++ b/project/onlinecommerceApp/templates/base.html
@@ -19,15 +19,13 @@
 </head>
 <body>
 
-<div class="navbar">
+<div class="navbar" >
     <div class="logo"><img src="{% static 'img/Logo.png' %}" width="60px" height="50px"></div>
 
 
-    <!--Barra Busqueda-->
-    <div class="search">
-        <input placeholder="Search..." type="text" id="termino-busqueda">
-        <button type="submit">Buscar</button>
-      </div>
+
+<button type="button" class="btn btn-outline-light" onclick="window.location.href='{% url 'dashboard' %}';">Dashboard</button>
+
 
    <div class="button-container">
     <button class="button" style="width: 80px; height: 80px;">
@@ -42,6 +40,7 @@
         <img src="{% static 'img/carrito.png' %}" style="width: 40px; height: 40px;">
     </button>
 </div>
+
 
 
 </div>
