--- a/project/onlinecommerceApp/templates/product_list.html
+++ b/project/onlinecommerceApp/templates/product_list.html
@@ -23,6 +23,9 @@
                     </h5>
                     <p class="card-text text-muted">{{ producto.precio | floatformat:2 }} USD</p>
                     <p class="card-text">{{ producto.descripcion }}</p>
+                    <a href="{% url 'detalle_producto' producto.pk %}" class="btn btn-primary">Ver Detalles</a>
+                    <a href="{% url 'actualizar_producto' producto.pk %}" class="btn btn-warning">Editar</a>
+                    <a href="{% url 'borrar_producto' producto.pk %}" class="btn btn-danger">Eliminar</a>
                 </div>
             </div>
         </div>
