--- a/project/onlinecommerceApp/static/css/dashboard.css
+++ b/project/onlinecommerceApp/static/css/dashboard.css
@@ -1,21 +1,10 @@
-body{
+body {
   background-color: #ffffff;
-
-
 }
 
 
-.navbar {
-    background-color: #fcbf4f;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: solid 2px #dfdede;
-    margin-bottom: 20px;
-    max-width: 100%;
-  }
-  .search {
+
+.search {
   display: inline-block;
   position: relative;
   margin-top: 0px;
@@ -53,14 +42,13 @@ body{
 
 .button-container {
   display: flex;
-  background-color:transparent;
+  background-color: transparent;
   width: 230px;
   height: 50px;
   align-items: center;
   justify-content: space-around;
   border-radius: 10px;
   margin-top: -5px;
-
 }
 
 .button {
@@ -86,145 +74,121 @@ body{
   font-size: 10px;
 }
 
-
 .dashboard {
-    display: flex;
+  display: flex;
 }
+
 @media screen and (max-width: 768px) {
-    .dashboard {
-        display: flex;
-        flex-direction: column;
-    }
+  .dashboard {
+    display: flex;
+    flex-direction: column;
+  }
 }
-
-
 
 .menu {
-    background-color: #ffffff;
-    color: #fff;
-    width: 210px;
-    padding: 20px;
-    height: 99%;
-    margin-top: 13px;
-    border-right: solid 3px #f8a232;
+  background-color: #ffffff;
+  color: #fff;
+  width: 210px;
+  padding: 20px;
+  height: 99%;
+  margin-top: 13px;
+  border-right: solid 3px #f8a232;
 }
+
 @media screen and (max-width: 768px) {
-    .menu {
-        width: 100%;
-        margin-left: 150px;
-        border-right: none;
-
-    }
+  .menu {
+    width: 100%;
+    margin-left: 150px;
+    border-right: none;
+  }
 }
-
-
 
 .menu ul {
-    list-style: none;
-    padding: 0;
-    margin-left: 20px;
-
+  list-style: none;
+  padding: 0;
+  margin-left: 20px;
 }
 
 .menu li {
-    margin-bottom: 10px;
-    margin-top: 35px;
+  margin-bottom: 10px;
+  margin-top: 35px;
 }
 
 .menu a {
-    text-decoration: none;
-    color: #000000;
-    font-size: 30px;
+  text-decoration: none;
+  color: #000000;
+  font-size: 30px;
 }
 
 .content {
-    flex-grow: 1;
-    padding: 20px;
-
-
+  flex-grow: 1;
+  padding: 20px;
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 0px;
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0px;
 }
 
-
-
 .stats {
-    display: flex;
-    margin-bottom: 24px;
+  display: flex;
+  margin-bottom: 24px;
 }
 
 .stat-card {
-    background-color: #f9f9f9;
-    border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    flex-basis: 30%;
-    margin-left: 10px;
-    margin-top: 10px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  flex-basis: 30%;
+  margin-left: 10px;
+  margin-top: 10px;
 }
 
 .stat-card h3 {
-    font-size: 1.2em;
-    margin-bottom: 10px;
+  font-size: 1.2em;
+  margin-bottom: 10px;
 }
 
 .stat-card p {
-    font-size: 1.5em;
-    font-weight: bold;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
-.right-panel{
-    margin-right: 50px;
-    margin-top: 0px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 10px;
-
+.right-panel {
+  margin-right: 50px;
+  margin-top: 0px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 10px;
 }
-
 
 /* Footer */
 .checkout .footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 10px 10px 20px;
-  background-color: #ECEFF1;
+  display: none; /* Oculta el footer */
 }
-
-.price {
-  position: relative;
-  font-size: 22px;
-  color: #2B2B2F;
-  font-weight: 900;
-}
-
 
 .page {
-    background-color: #f8f8f8;
-    padding: 20px;
-    text-align: center;
-    font-family: Arial, sans-serif;
-    color: #333;
-    border-top: 1px solid #ccc;
+  background-color: #f8f8f8;
+  padding: 20px;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  color: #333;
+  border-top: 1px solid #ccc;
 }
 
 .type {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .text-center {
-    text-align: center;
-    margin-bottom: 10px;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 /* Estilos para pantallas más pequeñas (menos de 768px) */
 @media screen and (max-width: 768px) {
-    .page {
-        width: 120%;
-    }
+  .page {
+    width: 120%;
+  }
 }
