--- a/project/onlinecommerceApp/templates/productDetail.html
+++ b/project/onlinecommerceApp/templates/productDetail.html
@@ -20,9 +20,18 @@
             <p class="text-muted">${{ object.precio | floatformat:2 }}</p>
         </div>
     </div>
-    <a href="{% url 'borrar_producto' producto.id_producto %} " class="btn btn-primary mt-4">Borrar</a>
     <a href="{% url 'listar_producto' %}" class="btn btn-primary mt-4">Volver</a>
+    <div class="mb-2">
+      <form method="post" action="{% url 'agregar_producto' producto.id_producto %}" class="d-inline">
+          {% csrf_token %}
+          <button type="submit" class="btn btn-success">Agregar al Carrito</button>
+      </form>
+    </div>
+
+    {% if user.is_authenticated and user == tienda.id_usuario %}
+    <a href="{% url 'borrar_producto' producto.id_producto %} " class="btn btn-primary mt-4">Borrar</a>
     <a href="{% url 'actualizar_producto' producto.id_producto %}" class="btn btn-primary mt-4">Acualizar</a>
+    {% endif %}
 
 </div>
 {% endblock %}
