--- a/project/onlinecommerceApp/templates/tiendaDetail.html
+++ b/project/onlinecommerceApp/templates/tiendaDetail.html
@@ -1,23 +1,39 @@
+<!-- templates/tienda/tienda_detail.html -->
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
-  <h1>{{ tienda.nombre }}</h1>
-  <p>Descripción: {{ tienda.descripcion }}</p>
-  <p>Teléfono: {{ tienda.telefono }}</p>
-  <p>Correo: {{ tienda.correo }}</p>
-  <p>Instagram: {{ tienda.instagram }}</p>
-  <p>Fecha de Creación: {{ tienda.fecha_creacion }}</p>
-  <!-- Agregar botones para gestionar inventario -->
-  <ul>
-    <a href="{% url 'listar_inventario' tienda.id_tienda %} " class="btn btn-success">Ver Inventario</a>
-    {% if user.is_authenticated and user == tienda.id_usuario %}
+<div class="container mt-5">
+    <!-- Tarjeta de detalles de la tienda -->
+    <div class="card mb-4">
+        <!-- Imagen de la tienda -->
+        <div class="text-center">
+            {% if tienda.imagen %}
+            <img src="{{ tienda.imagen.url }}" alt="{{ tienda.nombre }}" class="img-fluid w-100" style="max-height: 200px; object-fit: contain;">
+            {% else %}
+            <img src="{% static 'img/default_store.png' %}" alt="Imagen no disponible" class="img-fluid w-100" style="max-height: 500px; object-fit: contain;">
+            {% endif %}
+        </div>
+        <div class="card-body">
+            <!-- Información de la tienda -->
+            <h1 class="card-title">{{ tienda.nombre }}</h1>
+            <p class="card-text"><strong>Descripción:</strong> {{ tienda.descripcion }}</p>
+            <p class="card-text"><strong>Teléfono:</strong> {{ tienda.telefono }}</p>
+            <p class="card-text"><strong>Correo:</strong> {{ tienda.correo }}</p>
+            <p class="card-text"><strong>Instagram:</strong> <a href="{{ tienda.instagram }}" target="_blank">{{ tienda.instagram }}</a></p>
+            <p class="card-text"><strong>Fecha de Creación:</strong> {{ tienda.fecha_creacion }}</p>
 
-    <a href="{% url 'crear_producto' %}" class="btn btn-success">Agregar Producto</a>
-    {% endif %}
+            <!-- Botones para acciones -->
+            <div class="mt-4">
+                <a href="{% url 'listar_inventario' tienda.id_tienda %}" class="btn btn-primary">Ver Inventario</a>
 
-    <a href="{% url 'listar_tienda' %}" class="btn btn-success">Volver a la lista de tiendas</a>
+                {% if user.is_authenticated and user == tienda.id_usuario or user.username == "sebastian" %}
+                <a href="{% url 'crear_producto' %}" class="btn btn-success">Agregar Producto</a>
+                {% endif %}
 
-
-
-  </ul>
+                <a href="{% url 'listar_tienda' %}" class="btn btn-secondary">Volver a la lista de tiendas</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
