--- a/project/onlinecommerceApp/static/css/base.css
+++ b/project/onlinecommerceApp/static/css/base.css
@@ -128,7 +128,7 @@ body {
 }
 
 .button.agregar {
-  background-color: #fcbf4f;
+  background-color: orange;
   color: #fff;
   border: none;
   padding: 10px 20px;
