--- a/project/onlinecommerceApp/templates/inicio.html
+++ b/project/onlinecommerceApp/templates/inicio.html
@@ -21,39 +21,39 @@
         <div class="offers-container">
             <div class="card1" style="width:400px">
                 <div class="card__image">
-                    <img src="{% static 'img/banner.jpg' %}" alt="Oferta 1">
+                    <img src="{% static 'img/tiendas/EmprioArmani.jpg' %}" alt="Oferta 1">
                 </div>
             </div>
             <!-- Repeat the card div as needed -->
             <div class="card1" style="width:400px">
                 <div class="card__image">
-                    <img src="{% static 'img/banner.jpg' %}" alt="Oferta 2">
+                    <img src="{% static 'img/tiendas/Ferrari.jpg' %}" alt="Oferta 2">
                 </div>
             </div>
             <!-- Add more cards here if necessary -->
             <div class="card1" style="width:400px">
                 <div class="card__image">
-                    <img src="{% static 'img/banner.jpg' %}" alt="Oferta 2">
+                    <img src="{% static 'img/tiendas/lacostee.jpg' %}" alt="Oferta 2">
                 </div>
             </div>
             <div class="card1" style="width:400px">
                 <div class="card__image">
-                    <img src="{% static 'img/banner.jpg' %}" alt="Oferta 2">
+                    <img src="{% static 'img/tiendas/pepsi.jpg' %}" alt="Oferta 2">
                 </div>
             </div>
             <div class="card1" style="width:400px">
                 <div class="card__image">
-                    <img src="{% static 'img/banner.jpg' %}" alt="Oferta 2">
+                    <img src="{% static 'img/tiendas/zara.png' %}" alt="Oferta 2">
                 </div>
             </div>
             <div class="card1" style="width:400px">
                 <div class="card__image">
-                    <img src="{% static 'img/banner.jpg' %}" alt="Oferta 2">
+                    <img src="{% static 'img/tiendas/Hermes_Paris.jpg' %}" alt="Oferta 2">
                 </div>
             </div>
             <div class="card1" style="width:400px">
                 <div class="card__image">
-                    <img src="{% static 'img/banner.jpg' %}" alt="Oferta 2">
+                    <img src="{% static 'img/tiendas/lacoste.png' %}" alt="Oferta 2">
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@
                     <p><strong>Precio: </strong>${{ producto.precio }}</p>
                     <form method="post" action="{% url 'agregar_producto' producto.id_producto %}">
                         {% csrf_token %}
-                        <button type="submit" class="button agregar" style="backgraund-color:#fcbf4f">Agregar al Carrito</button>
+                        <button type="submit" class="button agregar" style="backgraund-color:orange">Agregar al Carrito</button>
                     </form>
                 </div>
                 {% endfor %}
